# aiaa2711-overfit-and-underfit-

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/superpowers/plans/: 2025-04-18-dl-and-report-completion-plan.md  2025-04-18-overfitting-underfitting-plan.md
docs/superpowers/specs/: 2025-04-18-dl-and-report-completion-design.md  2025-04-18-overfitting-underfitting-design.md
notebooks/: 01_polynomial_regression_demo.ipynb  02_regularization_demo.ipynb  03_deep_learning_overfitting.ipynb
report/: main.tex  references.bib
rubrics/: Peer Evaluation Rubric copy (1).docx  Report Evaluation Rubric copy (1).docx  Teacher Team Evaluation Rubric (1).docx
slides/: README.md  generate_pptx.py  presentation.pptx  presentation.tex  presentation_v2.pptx  presentation_v3.pptx  presentation_v4.pptx  presentation_v5.pptx  speaker-notes.md
src/: __init__.py  data_generation.py  deep_learning.py  polynomial_regression.py  regularization.py  utils.py  visualization.py
tests/: test_data_generation.py  test_deep_learning.py  test_polynomial_regression.py  test_regularization.py  test_utils.py
